--- a/yummy/template/about.pug
+++ b/yummy/template/about.pug
@@ -96,15 +96,17 @@ section.section_3.container-fluid
     hr
     div.post
         p.post_tag.text-center CÔNG THỨC NẤU ĂN
-        p.post_title.text-center BÀO NGƯ HẤP CHANH TÂY
+        p.post_title.text-center TRAI LUỘC CHANH XẢ
         p.post_subtitle.text-center Ngày 8 /9/2018, by NhatMinh, 2 bình luận
         div.post_image.text-center
           img(src='./images/about_Page/blog_post.png' alt='image')
         div
             p.post_content Mấy năm gần đây, nấm trở thành một món ăn được người tiêu dùng ưa thích do "độ sạch" và "độ dinh dưỡng" cao của sản phẩm. Chỉ cần gia giảm một chút nguyên liệu hoặc gia vị từ những công thức này, bạn còn có thể chế biến thành những món ăn chay tuyệt hảo.
-            p.post_detail Xem thêm ...
+            a(href="singerBlog.html")
+              p.post_detail Xem chi tiết ...
         hr
     div.text-center.btn_detail
+      a(href="blog.html")
         button.btn(type='button') Xem thêm
 
 section.section_4.container-fluid
@@ -131,9 +133,9 @@ section.section_4.container-fluid
         p.content.text-center Tinh thần, thái độ của anh chị em nhân viên nhà hàng hết sức nhiệt tình, rất tốt và chu đáo, anh Minh giám đốc cũng hết sức tận tình với khách hàng. Thức ăn đảm bảo an toàn thực phẩm, các món ăn ngon và đầy đặn, hình thức trang trí cũng rất đẹp.
         .reviewers.row
           .col-4.avatar
-            img(src='./images/about_Page/reviewer1.jpg') 
+            img(src='./images/about_Page/sontung.png') 
           .col-8.name_reviewers
-            p.name Suni Hạ Linh
+            p.name Sơn Tùng MTP
             p.role Ca sỹ
       .carousel-item
         p.content.text-center Tinh thần, thái độ của anh chị em nhân viên nhà hàng hết sức nhiệt tình, rất tốt và chu đáo, anh Minh giám đốc cũng hết sức tận tình với khách hàng. Thức ăn đảm bảo an toàn thực phẩm, các món ăn ngon và đầy đặn, hình thức trang trí cũng rất đẹp.
