--- a/yummy/template/cart.pug
+++ b/yummy/template/cart.pug
@@ -52,11 +52,11 @@ section.section_1.container
           tr.cart-item
             td.product-thumbnail
               a(href='#')
-                img.img-fluid(src='./images/cart_Page/img1.jpg')
+                img.img-fluid(src='./images/cart_Page/sp5.jpg')
             td.product-name
-              a(href='#') Salad Hoa Quả
+              a(href='#') Bò bít tết Kobe
             td.product-price
-              | 120000
+              | 150000
             td.product-quantity
               .quantity
                 button.qty-decrease(onclick='' type='button') -
