--- a/yummy/template/index.pug
+++ b/yummy/template/index.pug
@@ -181,7 +181,7 @@ section.section_3.services.container
     p.heading.text-center 
       span(style='color:#FD5B00;') Dịch vụ 
       | của chúng tôi
-    p.content.text-center Với các đầu bếp hàng đầu thế giới, chúng tôi đã tạo ra những “tác phẩm nghệ thuật” !
+    p.content.text-center Làm hài lòng khách hàng là điều chúng tôi đặt lên hàng đầu, khách hàng chính là người quyền lực nhất!
   div.service_content
     .row.text-center
       .col-3.service
@@ -250,6 +250,7 @@ section.section_4.menu_restaurant.container-fuild
             span.dish_name gác bếp nhân xâm
             span.dish_info 100.000VND
   div.text-center.btn_detail
+   a(href='menu.html')
     button.btn.btn-dark(type='submit' formaction='menu.html') Xem chi tiết
 //footer
 include template-parts/footer.pug
