--- a/yummy/template/singerProduct.pug
+++ b/yummy/template/singerProduct.pug
@@ -59,11 +59,11 @@ section.section_1.container-fluid
       .col-6.product_content_area
         //- .sub_menu HOME > THỊT > BÍT TẾT BÒ KOBE
         p.name_product Bít Tết Bò Kobe
-        p.price_product 50.000 vnd
-        p.sub_product Morbi ut arcu dolor. Maecenas id nulla nec nibh viverra vehicula. Cras feugiat, corper. lla vehicula, lacus ut suscipit fermentum, turpis felis ultricies dui, magna eu lacinia ullamcorper. lla vehicula, lacus ut suscipit fermentum, turpis felis ultricies dui.
+        p.price_product 150.000 vnd
+        p.sub_product Bò bít tết là 1 món ăn được rất nhiếu người ưa chuộng, bởi mùi vị thơm ngon ngọt của miếng thịt bò kết hợp với nước sốt khiến ai cũng mê mẩn. Món bò bít tết rất dễ làm , bạn có thể làm bò bít tết tại nhà hoặc có thưởng thức tại các nhà hàng .
         hr
         p.ingredients Thành phần chính: 
-          p.igd - Dứa gai
+          p.igd - 500g bò Kobe
           p.igd - Kiwi
           p.igd - Hạt điều
         .quantity.d-flex.pt-2
@@ -73,6 +73,9 @@ section.section_1.container-fluid
           .btn_chose
             a(href='cart.html')
               button.btn(type='submit') Thêm vào giỏ hàng
+          .btn_return
+            a(href='shop.html')
+              button.btn(type='submit') Tiếp tục mua hàng
         hr
         .tag Tags: Món chính
 section.section_2.container
@@ -106,6 +109,7 @@ section.section_2.container
       label(for='') Bình luận của bạn
       textarea#exampleFormControlTextarea1.form-control(rows='3' placeholder='Viết bình luận')
     .text-left
+     .btn_chose
       button.btn(type='submit') Hoàn thành
 
 section.section_3.container
