--- a/yummy/css/about.css
+++ b/yummy/css/about.css
@@ -174,6 +174,11 @@
     font-family: 'Poppins', sans-serif;
     font-size: 1.8rem;
 }
+.section_3 a:hover{
+  text-decoration: none;
+}
+
+
 
 .post{
   padding-left: 20rem;
@@ -211,7 +216,10 @@
     font-size: 2.4rem;
     font-family: 'Poppins', sans-serif; 
 }
-
+.section_3 .btn:hover{
+  background-color: #B62A00;
+  color: #ffffff!important;
+}
 .review .content{
   padding-top: 5rem;
   padding-bottom: 5rem;
