--- a/yummy/css/blog.css
+++ b/yummy/css/blog.css
@@ -45,6 +45,7 @@
 .form-inline .form-control{
     background-color: #4C5B7C;
     border: none;
+    color: #ffffff;
 }
 .menu_blog .nav-link{
     border-right: solid 1px #ffffff;
@@ -131,6 +132,9 @@
     font-family: 'Poppins', sans-serif; 
     color: #ffffff;
 }
+.section_1 a:hover{
+    text-decoration: none;
+  }
 
 @media only screen and (min-width: 1800px) {
     .form-inline{
