--- a/yummy/css/cart.css
+++ b/yummy/css/cart.css
@@ -212,6 +212,10 @@ textarea.form-control{
     font-size: 1.8rem;
     margin-top: 2rem;
 }
+button:hover{
+    background-color: #B62A00;
+    color: #ffffff!important;
+}
 
 
 @media only screen and (max-width: 576px) {
