--- a/yummy/css/shop.css
+++ b/yummy/css/shop.css
@@ -222,3 +222,68 @@
         color: #000;
     }
 }
+@media only screen and (max-width: 576px) {
+    .header_area {
+        background-image: url("../images/shop_Page/banner.png");
+        height: auto; 
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding: 0;
+    }
+    .header_main{
+        padding-top: 5rem;
+        padding-bottom: 5rem;
+        font-family: 'Fredericka the Great', cursive;
+        font-size: 15rem;
+        color: #ffffff;
+        line-height: 10rem;
+    }
+
+
+
+
+    /* Phân trang */
+    .pagination_area{
+        padding-left: 42%;
+        color: #000;
+    }
+    .btn_detail{
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
+    .section_1 .btn{
+        width: 10rem;
+        height: 3rem;
+        background-color: #FD5B00;
+        font-size: 2.4rem;
+        font-family: 'Poppins', sans-serif; 
+        color: #ffffff;
+    }
+    .text_content{
+        padding: 2rem 3.5rem 2rem 3.5rem;
+    }
+
+
+
+
+    .hover_card i{
+        font-size: 10rem;
+        padding: 2rem;
+    }
+
+
+    /* Phân trang */
+    .pagination_area{
+        padding-left: 24%;
+        color: #000;
+    }
+    .pagination_area .page-item{
+        width: 5rem;
+        height: 5rem;
+        text-align: center;
+    }
+    .pagination_area .page-item a{
+        color: #000;
+    }
+}
