--- a/yummy/css/singerBlog.css
+++ b/yummy/css/singerBlog.css
@@ -135,3 +135,77 @@
 .about_us ul li a:hover{
     color: #FD5B00;   
 }
+.footer_form{
+    position: absolute;
+    z-index: 1;
+    top: -50%;
+    left: 50%;
+    width: 40%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+    background-color: #ffffff;
+}
+.title_form{
+    /* color: #ffffff; */
+    font-size: 4.8rem;
+    font-family: 'Dancing Script', cursive;
+}
+.form-group label{
+    font-size: 1.8rem;
+    font-family: 'Poppins', sans-serif;
+}
+.form-group input{
+    font-size: 1.2rem;
+    font-family: 'Poppins', sans-serif;
+    outline: 0;
+    border-width: 0 0 1px; 
+}
+textarea{
+    outline: 0;
+    border-width: 0 0 1px;
+    
+}
+textarea.form-control{
+    font-size: 1.2rem;
+    font-family: 'Poppins', sans-serif;
+    border: none;
+    border-bottom: 1px solid #ced4da;
+}
+
+.form-group .form-control:focus{
+    outline: 0;
+    border-width: 0 0 1px;
+    box-shadow: none; 
+}
+.btn{
+    background-color: #FD5B00;
+    color: #ffffff;
+    font-size: 1.4rem;
+    margin-top: 2rem;
+}
+button:hover{
+    background-color: #B62A00;
+    color: #ffffff!important;
+}
+.padding_form .btn:hover{
+    background-color: #B62A00;
+    color: #ffffff;
+}
+@media only screen and (max-width: 576px) {
+    .header_area {
+        background-image: url("../images/singerProduct_Page/banner.png");
+        height: auto; 
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding: 0;
+    }
+    .header_main{
+        padding-top: 5rem;
+        padding-bottom: 5rem;
+        font-family: 'Fredericka the Great', cursive;
+        font-size: 15rem;
+        color: #ffffff;
+        line-height: 10rem;
+    }
+}
