--- a/yummy/css/about.css
+++ b/yummy/css/about.css
@@ -286,6 +286,9 @@
 }
 
 @media only screen and (max-width: 576px) {
+    .menu-main .nav-item .page_2{
+        border-bottom: none;
+    }
   .header_area {
       background-image: url("../images/about_Page/banner.png");
       height: auto; 
