--- a/yummy/css/index.css
+++ b/yummy/css/index.css
@@ -308,6 +308,12 @@
 
 
 @media only screen and (max-width: 576px) {
+    .menu-main .nav-item .page_1{
+        border-bottom: none;
+    }
+    .menu-main .nav-item .page_1:active{
+        border-bottom: none;
+    }
     .header_area {
         background-image: url("../images/home_Page/banner1.jpg");
         height: auto; 
