--- a/quiz-app/src/App.css
+++ b/quiz-app/src/App.css
@@ -1,6 +1,6 @@
 .App {
   padding: 0;
-  background-image: url("./background.svg");
+  background-image: url("./Confetti-Doodles.svg");
   background-position: 50%;
   width: 100%;
   height: 100vh;
