--- a/Noel/main.css
+++ b/Noel/main.css
@@ -1,8 +1,7 @@
 *{
 	box-sizing:border-box;
 	margin:0;
-	padding:0;
-	
+	padding:0;	
 }
 html{
 	background-image: url("img/background.jpg"); 
@@ -102,7 +101,7 @@ audio{
 }
 .btn_gift{
 	margin-top: 10%;
-	margin-left: 46%;
+	margin-left: 44%;
 	text-align: center;
 	position: absolute;
 }
@@ -274,3 +273,149 @@ audio{
 	}
 }
 
+@media only screen and (min-width: 400px)
+{
+	.btn_gift button{
+		padding: 6rem 10rem;
+		font-size: 6.4rem;
+		margin: 0.4rem 0.2rem;
+		animation: display_btn 10s ease-in-out;
+	}
+	.btn_gift{
+		margin-left: 0%;
+		text-align: center;
+		position: relative;
+	}
+	.santa{
+		max-width: 60%;
+		animation: move_santa 10s ease-in 0s 1;
+		overflow: hidden;
+		opacity: 0;
+	}
+	.santa_l{
+		width: 100%;
+		animation: santa 10s linear 1;
+		animation-direction: alternate;
+		padding-top: 80%;
+	}
+	.house{
+		min-width: 100%;
+		position: absolute;
+		bottom: 0%;
+	}
+	.qua img{
+		max-width: 10%;
+	}
+	.qua1{
+		left: 95%;
+		position: absolute;
+		opacity: 0;
+		animation: move_qua 10s ease-in 5s 1;
+	}
+	.qua2{
+		left: 85%;
+		position: absolute;
+		opacity: 0;
+		animation: move_qua 10s ease-in 5.5s 1;
+	}
+	.qua3{
+		left: 75%;
+		position: absolute;
+		opacity: 0;
+		animation: move_qua 10s ease-in 6s 1;
+	}
+	.qua4{
+		left: 65%;
+		position: absolute;
+		opacity: 0;
+		animation: move_qua 10s ease-in 6.5s 1;
+	}
+	.qua5{
+		left: 55%;
+		position: absolute;
+		opacity: 0;
+		animation: move_qua 10s ease-in 7s 1;
+	}
+	.qua6{
+		left: 45%;
+		position: absolute;
+		opacity: 0;
+		animation: move_qua 10s ease-in 7.5s 1;
+	}
+	.qua7{
+		left: 35%;
+		position: absolute;
+		opacity: 0;
+		animation: move_qua 10s ease-in 8s 1;
+	}
+	.qua8{
+		left: 25%;
+		position: absolute;
+		opacity: 0;
+		animation: move_qua 10s ease-in 8.2s 1;
+	}
+	.qua9{
+		left: 15%;
+		position: absolute;
+		opacity: 0;
+		animation: move_qua 10s ease-in 8.6s 1;
+	}
+	.qua10{
+		left: 5%;
+		position: absolute;
+		opacity: 0;
+		animation: move_qua 10s ease-in 9s 1;
+	}
+	@keyframes move_qua{
+		0%{
+			opacity: 1;
+			top: 60%;
+		}
+		100%{
+			opacity: 1;
+			top: 95%;
+		}
+	}
+	@keyframes move_santa {
+		0% {
+			opacity: 0;
+			right: -60%;
+		}
+		30% {
+			opacity: 1;
+		}
+		100% {
+			opacity: 0;
+			right: 115%;
+		}   
+	}
+	@keyframes santa {
+		10%{
+			transform: rotate(5deg);
+		}        
+		20%{
+			transform: rotate(-0deg);
+		}
+		30%{
+			transform: rotate(5deg);
+		}        
+		40%{
+			transform: rotate(-0deg);
+		}    
+		50%{
+			transform: rotate(5deg);
+		}        
+		60%{
+			transform: rotate(-0deg);
+		}
+		70%{
+			transform: rotate(5deg);
+		}        
+		80%{
+			transform: rotate(-0deg);
+		}
+		90%{
+			transform: rotate(5deg);
+		}
+	}
+}
