--- a/Noel/main.css
+++ b/Noel/main.css
@@ -100,9 +100,10 @@ audio{
 	animation: move_qua 10s ease-in 9s infinite;
 }
 .btn_gift{
+	display: flex;
+	justify-content: center;
 	margin-top: 10%;
 	margin-left: 44%;
-	text-align: center;
 	position: absolute;
 }
 .btn_gift button{
@@ -266,14 +267,14 @@ audio{
 	}
 }
 
-@media only screen and (max-width: 1100px)
+/* @media only screen and (max-width: 1100px)
 {
 	.santa_l{
-		padding-top: 50%;
+		padding-top: 100px;
 	}
-}
+} */
 
-@media only screen and (min-width: 400px)
+@media only screen and (max-width: 1100px)
 {
 	.btn_gift button{
 		padding: 6rem 10rem;
