--- a/Noel/css/gift.css
+++ b/Noel/css/gift.css
@@ -5,15 +5,12 @@
 }
 html {
   font-size: 62.5%;
-}
-body {
   background-image: url("../img/background5.jpg");
+  width: 100%;
+  height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 120rem;
-  width: 100%;
-  position: relative;
 }
 audio {
   display: none;
@@ -256,19 +253,21 @@ i {
     transform: translate3D(7.5%, 100%, 0);
   }
 }
-@media only screen and (max-width: 1500px) {
+@media only screen and (max-width: 1900px) {
   body {
     height: 50rem;
     width: 100%;
   }
 
   .gift {
+    z-index: 2;
     padding-top: 30%;
     padding-left: 75%;
   }
   .pine_png {
+    z-index: 1;
     padding-top: 13%;
-    padding-left: 10%;
+    padding-left: 20%;
   }
   .card_position {
     margin-top: 2%;
@@ -283,6 +282,12 @@ i {
     transform: scale(1.3);
     transition: 0.5s;
     cursor: pointer;
+  }
+  .content_card {
+    padding-right: 100px;
+  }
+  .text_sp {
+    font-size: 18px;
   }
   @keyframes slide-fwd-tl {
     0% {
