--- a/WebCodeGirlDemo/style.css
+++ b/WebCodeGirlDemo/style.css
@@ -13,7 +13,7 @@ body {
     font-weight: 300;
     color: inherit;
     color: #19110b;
-    font-family: Louis Vuitton Web,Helvetica Neue,Helvetica,Arial,sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 a {
@@ -22,26 +22,7 @@ a {
 }
 
 h2 {
-    font-size: 28px;
-}
-
-/* search */
-.search input{
-    height: 40px;
-    width: 500px;
-    text-indent: 60px;
-    background-color: #f6f5f3;
-    border-radius: .375rem;
-    border: none;
-}
-
-.search input:focus {
-    outline: none;
-}
-
-.search .icon-search {
-    position: absolute;
-    padding: 5px 0 5px 20px;
+    font-size: 32px;
 }
 
 .text-label-header {
@@ -64,7 +45,7 @@ h2 {
     display: flex;
     justify-content: space-between;
     padding: 10px 40px 10px 40px;
-    box-shadow: inset 0 1px 0 0 #eae8e4, inset 0 -1px 0 0 #eae8e4;
+    border-bottom: 1px solid #eae8e4;
 }
 
 .left-content, 
@@ -91,13 +72,32 @@ h2 {
     padding: 0px 20px 0px 20px;
 }
 
+/* search box*/
+.search input{
+    height: 40px;
+    width: 500px;
+    text-indent: 60px;
+    background-color: #f6f5f3;
+    border-radius: .375rem;
+    border: none;
+}
+
+.search input:focus {
+    outline: none;
+}
+
+.search .icon-search {
+    position: absolute;
+    padding: 5px 0 5px 20px;
+}
+
 .header-navigation {
     display: flex;
     flex-flow: column;
     justify-content: center;
     height: 80px;
     padding: 0 80px 0 80px;
-    box-shadow: inset 0 1px 0 0 #eae8e4, inset 0 -1px 0 0 #eae8e4;
+    border-bottom: 1px solid #eae8e4;
 }
 
 .header-navigation .position-nav{
@@ -133,6 +133,10 @@ h2 {
     font-size: 18px;
 }
 
+.menu-links:hover {
+    color: #adb5bd;
+}
+
 .search {
     display: flex;
     justify-content: start;
@@ -159,11 +163,12 @@ h2 {
 }
 
 .btn {
-    width: 240px;
-    height: 52px;
+    width: 300px;
+    height: 60px;
     background-color: #000000;
     color: #ffffff;
     border: none;
+    font-size: 18px;
 }
 
 .btn:focus {
@@ -173,6 +178,7 @@ h2 {
 .btn:hover {
     background-color: #dddddd;
     cursor: pointer;
+    color: #000000;
 }
 
 .content-line1 {
@@ -282,6 +288,7 @@ h2 {
     flex-wrap: wrap;
     list-style: none;
     margin-top: 120px;
+    margin-bottom: 100px;
     background-color: #eae8e4;
 }
 
