--- a/NgaoBlog/style.css
+++ b/NgaoBlog/style.css
@@ -128,4 +128,29 @@ footer {
 
 .left, .right {
   margin: auto;
+  padding: 0px 20px;
+}
+
+@media only screen and (max-width: 1439px){
+  .content-area {
+    padding: 80px 30px;
+  }
+}
+
+@media only screen and (max-width: 1199px){
+
+}
+@media only screen and (max-width: 1023px){
+
+}
+@media only screen and (max-width: 767px){
+  .grid {
+    display: grid;
+    grid-gap: 60px 100px;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-auto-rows: 20px;
+  }
+}
+@media only screen and (max-width: 479px){
+
 }
