--- a/NgaoBlog/style.css
+++ b/NgaoBlog/style.css
@@ -9,6 +9,10 @@ html { overflow-y: scroll; }
   padding: 0 45px;
 }
 
+.bg-light {
+  background-color: #ffffff!important;
+}
+
 .content-area {
   padding: 80px;
 }
@@ -142,6 +146,36 @@ footer {
   padding: 0px 20px;
 }
 
+/* About */
+.container-inner {
+  width: 1100px;
+  margin: auto;
+}
+
+.about-image {
+  max-width: 100%;
+  padding-bottom: 75px;
+}
+
+.about-image img{
+  max-width: 100%;
+}
+
+.about-content .title {
+  font-size: 22px;
+}
+
+.text p {
+  font-family: "Poppins", sans-serif;
+  font-size: 13px;
+  line-height: 25px;
+  letter-spacing: 0px;
+  font-weight: 400;
+  font-style: normal;
+  text-transform: none;
+  color: #7e7e7e;
+}
+
 @media only screen and (max-width: 1439px){
   .content-area {
     padding: 80px 30px;
@@ -149,7 +183,10 @@ footer {
 }
 
 @media only screen and (max-width: 1199px){
-
+  .container-inner {
+    width: 700px;
+    margin: auto;
+  }
 }
 @media only screen and (max-width: 1023px){
 
@@ -181,5 +218,10 @@ footer {
 
   .nav-home {
     width: 100%;
+  }
+
+  .container-inner {
+    width: 300px;
+    margin: auto;
   }
 }
