--- a/NgaoBlog/style.css
+++ b/NgaoBlog/style.css
@@ -148,7 +148,7 @@ footer {
 
 /* About */
 .container-inner {
-  width: 1100px;
+  width: 1200px;
   margin: auto;
 }
 
@@ -175,6 +175,122 @@ footer {
   text-transform: none;
   color: #7e7e7e;
 }
+
+/* Post */
+.post-intro .s-post-info div:not(:first-child):before {
+  content: '/';
+  position: relative;
+  left: -10px;
+}
+
+.post-intro {
+  background-color: #ffffff;
+}
+
+.s-post-info div {
+  padding: 0 10px 0 0;
+  margin: 0 10px 0 0;
+}
+
+.s-post-info {
+  display: flex;
+  justify-content: start;
+  font-family: Poppins, sans-serif;
+  font-size: 12px;
+  letter-spacing: 0.2px;
+  font-weight: 600;
+  font-style: normal;
+  text-transform: uppercase;
+  color: #c7c7c7;
+  margin-bottom: 20px;
+}
+
+.post-intro {
+  padding: 40px 50px;
+  margin: 0 0 30px 0;
+}
+
+.s-post-title h3 {
+  font-family: Poppins, sans-serif;
+  font-size: 22px;
+  line-height: 29px;
+  letter-spacing: 0px;
+  font-weight: 600;
+  font-style: normal;
+  text-transform: none;
+  color: #161616;
+}
+
+.post-content {
+  background-color: #fff;
+  padding: 35px 45px;
+  border: 1px solid transparent;
+}
+
+.s-text p {
+  font-family: "Poppins", sans-serif;
+  font-size: 13px;
+  line-height: 25px;
+  letter-spacing: 0px;
+  font-weight: 400;
+  font-style: normal;
+  text-transform: none;
+  color: #7e7e7e;
+}
+
+.s-iamge {
+  max-width: 100%;
+  padding: 20px 0px;
+}
+
+.s-iamge img{
+  max-width: 100%;
+}
+
+.post-tag {
+  margin-top: 35px;
+}
+
+.post-tag h5{
+  display: inline-block;
+  line-height: 36px;
+  margin-right: 10px;
+  font-weight: 700;
+}
+
+.tags-text {
+  display: flex;
+  justify-content: start;
+}
+
+.tags-text a {
+  margin: 0 7px 5px 0;
+  color: #a7a6a6;
+  border: 1px solid #a7a6a6;
+  padding: 0 15px;
+  line-height: 32px;
+  height: 32px;
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 10px!important;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  -webkit-transition: background-color .2s ease-in-out,border-color .2s ease-in-out,color .2s ease-in-out;
+  -moz-transition: background-color .2s ease-in-out,border-color .2s ease-in-out,color .2s ease-in-out;
+  -ms-transition: background-color .2s ease-in-out,border-color .2s ease-in-out,color .2s ease-in-out;
+  -o-transition: background-color .2s ease-in-out,border-color .2s ease-in-out,color .2s ease-in-out;
+  transition: background-color .2s ease-in-out,border-color .2s ease-in-out,color .2s ease-in-out;
+}
+
+.tags-text a:hover {
+  color: #fff;
+  border-color: #9d9d9d;
+  background-color: #9d9d9d;
+  text-decoration: none;
+}
+
+
 
 @media only screen and (max-width: 1439px){
   .content-area {
